--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,21 @@
+/**
+ * style.css
+ *
+ *
+ * let's sets also the box-sizing property to border-box for all elements.
+ *
+ */
+
+html {
+    box-sizing: border-box;
+}
+
+*,
+*::after,
+*::before {
+    box-sizing: inherit;
+}
+
 section div {
     float: left;
     margin: 10px 20px;
@@ -5,7 +23,6 @@ section div {
 
 section p {
     margin: 10px 20px;
-
 }
 
 section::after {
@@ -31,6 +48,23 @@ section::after {
 
 .box.conic {
     background: conic-gradient(red, blue);
+}
+
+.box.shadow {
+    box-shadow: 15px 5px 2px 1px red;
+}
+
+.box.shadows {
+    box-shadow:
+        5px 5px 5px 0px #289fed,
+        10px 10px 0px 0px #5fb8ff,
+        15px 30px 0px 0px #a1d8ff,
+        20px 20px 0px 0px #cae6ff;
+}
+
+.text-shadow {
+    font-size: 50px;
+    text-shadow: rgba(248, 33, 58, 0.5) 8px 2px 1px;
 }
 
 .box.dimension {
