--- a/style/style.css
+++ b/style/style.css
@@ -16,10 +16,10 @@ html {
     box-sizing: inherit;
 }
 
-h1{
+h1 {
     font-size: 40px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 /* division for each section */
@@ -74,15 +74,6 @@ section::after {
     text-shadow: rgba(248, 33, 58, 0.5) 8px 2px 1px;
 }
 
-.box.dimension {
-    transition: all 2s;
-}
-
-.box.dimension:hover {
-    width: 100px;
-    height: 50px;
-}
-
 .box.color {
     background-color: blue;
     transition: all 2s;
@@ -93,9 +84,51 @@ section::after {
 }
 
 .box.radius {
+    background-color: red;
     transition: border-radius 2s;
 }
 
 .box.radius:hover {
     border-radius: 50%;
+}
+
+.box.dimension {
+    transition: all 2s;
+    background-color: blue;
+}
+
+.box.dimension:hover {
+    width: 100px;
+    height: 50px;
+}
+
+.box.translate {
+    background-color: red;
+}
+
+.box.translate:hover {
+    transform: translate(25px, 25px);
+    transition: all 1s;
+}
+
+.box.scale {
+    background-color: blue;
+}
+
+.box.scale:hover {
+    transform: scale(0.8);
+    transition: all 1s;
+}
+
+.box.skew {
+    background: linear-gradient(to right, red, blue);
+}
+
+.box.skew:hover {
+    transform: skew(10deg, 10deg);
+    transition: all 1s;
+}
+
+.box.transform-origin {
+    transform-origin: 0 0;
 }
