--- a/style/style.css
+++ b/style/style.css
@@ -132,3 +132,28 @@ section::after {
 .box.transform-origin {
     transform-origin: 0 0;
 }
+
+.box.animations {
+    width: 200px;
+    height: 200px;
+    animation: 5s animations infinite ease-in-out;
+}
+
+@keyframes animations {
+    0% {
+        transform: rotateX(0) rotateY(0) rotateZ(0);
+    }
+
+    33% {
+        transform: rotateX(180deg) rotateY(0) rotateZ(0);
+    }
+
+    67% {
+        transform: rotateX(180deg) rotateY(180deg) rotateZ(0);
+    }
+
+    100% {
+        transform: rotateX(180deg) rotateY(180deg) rotateZ(180deg);
+
+    }
+}
