completata documentazione esempi sulla presentazione, vale PULLA tutto

--- a/style/style.css
+++ b/style/style.css
@@ -38,25 +38,15 @@ section::after {
     display: block;
 }
 
-
+/* common box for all the trys of code */
 .box {
     width: 200px;
     height: 100px;
     border: 1px solid black;
 }
 
-.box.linear {
-    background: linear-gradient(45deg, red, blue);
-}
 
-.box.radial {
-    background: radial-gradient(circle, red, blue);
-}
-
-.box.conic {
-    background: conic-gradient(red, blue);
-}
-
+/* play whit the box-shadows on the div whit class (.box) */
 .box.shadow {
     box-shadow: 15px 5px 2px 1px red;
 }
@@ -69,20 +59,41 @@ section::after {
         20px 20px 0px 0px #cae6ff;
 }
 
-.text-shadow {
+
+/* play whit the text-shadows on the p */
+p.text-shadow {
     font-size: 50px;
     text-shadow: rgba(248, 33, 58, 0.5) 8px 2px 1px;
 }
 
+
+/* play whit the gradients on the div whit class (.box) */
+.box.linear {
+    background: linear-gradient(45deg, red, blue);
+}
+
+.box.radial {
+    background: radial-gradient(circle, red, blue);
+}
+
+.box.conic {
+    background: conic-gradient(red, blue);
+}
+
+
+/* play whit the transitons on the div whit class (.box) */
+
+/* 1. transition of the background-color */
 .box.color {
     background-color: blue;
-    transition: all 2s;
+    transition: background-color 2s;
 }
 
 .box.color:hover {
     background-color: red;
 }
 
+/* 2. transition of the border-radius */
 .box.radius {
     background-color: red;
     transition: border-radius 2s;
@@ -92,6 +103,7 @@ section::after {
     border-radius: 50%;
 }
 
+/* 3. transition */
 .box.dimension {
     transition: all 2s;
     background-color: blue;
@@ -102,6 +114,10 @@ section::after {
     height: 50px;
 }
 
+
+/* play whit the transform on the div whit class (.box) */
+
+/* 1. translate */
 .box.translate {
     background-color: red;
 }
@@ -111,6 +127,7 @@ section::after {
     transition: all 1s;
 }
 
+/* 2.scale */
 .box.scale {
     background-color: blue;
 }
@@ -120,6 +137,7 @@ section::after {
     transition: all 1s;
 }
 
+/*3. skew */
 .box.skew {
     background: linear-gradient(to right, red, blue);
 }
@@ -129,10 +147,13 @@ section::after {
     transition: all 1s;
 }
 
+/* 4. transform-origin */
 .box.transform-origin {
     transform-origin: 0 0;
 }
 
+
+/*  play whit the animations on the div whit class (.box)  */
 .box.animations {
     width: 200px;
     height: 200px;
